--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-    <app-root></app-root>
+    <div class="main">
+        <app-root></app-root>
+    </div>    
 </body>
 
 </html>
