--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+     <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberfront</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +15,11 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+       
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png">  
+
 </head>
 
 <body>
